test/libyul/yulSyntaxTests/invalid/jumpi_disallowed.yul
{
    jumpi(2, 1)
}
// ----
// DeclarationError 4619: (6-11): Function "jumpi" not found.
